fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -214,7 +214,7 @@
 
 .headshot {
   border-radius: 50%;
-  margin-bottom: 10%;
+  margin-bottom: 5vh;
   box-shadow: 10px 10px black;
 }
 
